<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="240dp">

                <ProgressBar
                    android:id="@+id/pd"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="240dp"
                    android:layout_height="240dp"
                    android:layout_gravity="center" />

                <ImageView
                    android:id="@+id/ivBackGround"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/icon"
                    android:scaleType="centerCrop" />

                <RelativeLayout
                    android:id="@+id/rlCover"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:gravity="center">

                    <FrameLayout
                        android:id="@+id/ffFrame"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="20dp">

                        <ProgressBar
                            android:id="@+id/pbar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/ivProfilePicture"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@color/colorPrimary" />
                    </FrameLayout>

                    <TextView
                        android:id="@+id/tvUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/tvName"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="-27dp"
                        android:background="@drawable/background"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/hardik"
                        android:textColor="#fff"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ffFrame"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/background"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/hardik_bamaniya"
                        android:textColor="#fff"
                        android:textSize="25sp" />


                </RelativeLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/followers"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvFollowers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/_12_120"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/follow">

                    </Button>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/views"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvViews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/_2_11_120"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <android.support.v4.app.FragmentTabHost
                android:id="@+id/tabHost"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="0dp">

                    <TabWidget
                        android:id="@android:id/tabs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp" />

                    <FrameLayout
                        android:id="@android:id/tabcontent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>
            </android.support.v4.app.FragmentTabHost>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>